// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Direksi FinanceDashboard (snapshot) > renders empty sales orders state and matches snapshot 1`] = `
<div
  class="w-full h-full animate-[fadeIn_0.3s_ease-out]"
>
  <div
    class="min-h-[calc(100vh-var(--page-py)-var(--page-pb))]"
  >
    <header
      class="flex justify-between items-center border-b border-slate-100 pb-3 mb-[var(--section-gap)]"
      style="margin-bottom: var(--section-gap);"
    >
      <div>
        <h1
          class="text-dashboard-title uppercase"
        >
          Finance
           
          <span
            class="text-status-action"
          >
            Gate v2.0
          </span>
        </h1>
        <p
          class="font-bold text-slate-400 tracking-tight mt-1.5"
          style="font-size: var(--module-subtitle-size);"
        >
          Billing & Payment Verification Command Center
        </p>
      </div>
      <div
        class="hidden md:flex items-center gap-3"
      >
        <button
          class="group/button inline-flex shrink-0 items-center justify-center border bg-clip-padding whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 hover:bg-muted aria-expanded:bg-muted aria-expanded:text-foreground dark:border-input dark:bg-input/30 dark:hover:bg-input/50 h-7 gap-1 rounded-[min(var(--radius-md),12px)] px-2.5 in-data-[slot=button-group]:rounded-lg has-data-[icon=inline-end]:pr-1.5 has-data-[icon=inline-start]:pl-1.5 [&_svg:not([class*='size-'])]:size-3.5 border-gray-200 bg-white text-gray-500 hover:text-gray-900 hover:border-gray-300 font-bold uppercase tracking-tight text-[10px]"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-search mr-2 h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21 21-4.34-4.34"
            />
            <circle
              cx="11"
              cy="11"
              r="8"
            />
          </svg>
           Audit Log
        </button>
      </div>
    </header>
    <div
      class="flex flex-col"
      style="gap: var(--section-gap);"
    >
      <div
        class="grid grid-cols-3 gap-8 mb-6"
      >
        <div
          class="bg-white dark:bg-[#0c1322] border rounded-xl p-5 shadow-2xs transition-all group overflow-hidden relative min-h-[120px] flex items-center justify-between border-rose-300 dark:border-rose-800  "
        >
          <div
            class="flex justify-between items-center relative z-10 w-full"
          >
            <div
              class="space-y-1.5 flex-1 min-w-0 pr-4"
            >
              <p
                class="text-[11px] font-semibold text-slate-500 dark:text-slate-400 uppercase tracking-wider"
              >
                Total SO
              </p>
              <h3
                class="text-2xl font-bold tracking-tight tabular-nums leading-tight text-rose-600 dark:text-rose-400"
              >
                0
              </h3>
              <div
                class="flex items-center gap-2 pt-0.5"
              >
                <div
                  class="flex-1 h-1 bg-slate-100 dark:bg-slate-800 rounded-full overflow-hidden"
                >
                  <div
                    class="h-full bg-rose-400 rounded-full"
                    style="width: 50%;"
                  />
                </div>
                <span
                  class="text-[10px] font-semibold tabular-nums text-rose-600 dark:text-rose-400"
                >
                  50
                  %
                </span>
              </div>
            </div>
            <div
              class="p-3 rounded-xl shrink-0 bg-rose-50 text-rose-500 dark:bg-rose-950/50"
            >
              <span
                class="[&>svg]:w-4 [&>svg]:h-4"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-file-text"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
                  />
                  <path
                    d="M14 2v5a1 1 0 0 0 1 1h5"
                  />
                  <path
                    d="M10 9H8"
                  />
                  <path
                    d="M16 13H8"
                  />
                  <path
                    d="M16 17H8"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <div
          class="bg-white dark:bg-[#0c1322] border rounded-xl p-5 shadow-2xs transition-all group overflow-hidden relative min-h-[120px] flex items-center justify-between border-emerald-300 dark:border-emerald-800  "
        >
          <div
            class="flex justify-between items-center relative z-10 w-full"
          >
            <div
              class="space-y-1.5 flex-1 min-w-0 pr-4"
            >
              <p
                class="text-[11px] font-semibold text-slate-500 dark:text-slate-400 uppercase tracking-wider"
              >
                Pending DP
              </p>
              <h3
                class="text-2xl font-bold tracking-tight tabular-nums leading-tight text-emerald-600 dark:text-emerald-400"
              >
                0
              </h3>
              <div
                class="flex items-center gap-2 pt-0.5"
              >
                <div
                  class="flex-1 h-1 bg-slate-100 dark:bg-slate-800 rounded-full overflow-hidden"
                >
                  <div
                    class="h-full bg-emerald-500 rounded-full"
                    style="width: 100%;"
                  />
                </div>
                <span
                  class="text-[10px] font-semibold tabular-nums text-emerald-600 dark:text-emerald-400"
                >
                  100
                  %
                </span>
              </div>
            </div>
            <div
              class="p-3 rounded-xl shrink-0 bg-emerald-50 text-emerald-500 dark:bg-emerald-950/50"
            >
              <span
                class="[&>svg]:w-4 [&>svg]:h-4"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-dollar-sign"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="12"
                    x2="12"
                    y1="2"
                    y2="22"
                  />
                  <path
                    d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <div
          class="bg-white dark:bg-[#0c1322] border rounded-xl p-5 shadow-2xs transition-all group overflow-hidden relative min-h-[120px] flex items-center justify-between border-rose-300 dark:border-rose-800  "
        >
          <div
            class="flex justify-between items-center relative z-10 w-full"
          >
            <div
              class="space-y-1.5 flex-1 min-w-0 pr-4"
            >
              <p
                class="text-[11px] font-semibold text-slate-500 dark:text-slate-400 uppercase tracking-wider"
              >
                Ready to Produce
              </p>
              <h3
                class="text-2xl font-bold tracking-tight tabular-nums leading-tight text-rose-600 dark:text-rose-400"
              >
                0
              </h3>
              <div
                class="flex items-center gap-2 pt-0.5"
              >
                <div
                  class="flex-1 h-1 bg-slate-100 dark:bg-slate-800 rounded-full overflow-hidden"
                >
                  <div
                    class="h-full bg-rose-400 rounded-full"
                    style="width: 50%;"
                  />
                </div>
                <span
                  class="text-[10px] font-semibold tabular-nums text-rose-600 dark:text-rose-400"
                >
                  50
                  %
                </span>
              </div>
            </div>
            <div
              class="p-3 rounded-xl shrink-0 bg-rose-50 text-rose-500 dark:bg-rose-950/50"
            >
              <span
                class="[&>svg]:w-4 [&>svg]:h-4"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-factory"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 16h.01"
                  />
                  <path
                    d="M16 16h.01"
                  />
                  <path
                    d="M3 19a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V8.5a.5.5 0 0 0-.769-.422l-4.462 2.844A.5.5 0 0 1 15 10.5v-2a.5.5 0 0 0-.769-.422L9.77 10.922A.5.5 0 0 1 9 10.5V5a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2z"
                  />
                  <path
                    d="M8 16h.01"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="grid grid-cols-1 lg:grid-cols-3 gap-6"
      >
        <div
          class="group/card flex flex-col gap-4 overflow-hidden text-sm text-text-main border shadow-[0_4px_6px_-1px_rgba(0,0,0,0.02)] transition-all duration-300 hover:shadow-[0_20px_25px_-5px_rgba(0,0,0,0.05)] hover:border-slate-300 has-data-[slot=card-footer]:pb-0 has-[>img:first-child]:pt-0 data-[size=sm]:gap-3 data-[size=sm]:py-3 data-[size=sm]:has-data-[slot=card-footer]:pb-0 *:[img:first-child]:rounded-t-[--card-radius] *:[img:last-child]:rounded-b-[--card-radius] lg:col-span-3 border-gray-200 bg-white"
          data-size="default"
          data-slot="card"
          style="border-radius: var(--card-radius); padding: var(--card-py) var(--card-px);"
        >
          <div
            class="group/card-header @container/card-header grid auto-rows-min items-start gap-1 rounded-t-[--card-radius] px-[--card-px] group-data-[size=sm]/card:px-3 has-data-[slot=card-action]:grid-cols-[1fr_auto] has-data-[slot=card-description]:grid-rows-[auto_auto] [.border-b]:pb-4 group-data-[size=sm]/card:[.border-b]:pb-3"
            data-slot="card-header"
          >
            <div
              class="flex items-center justify-between"
            >
              <div>
                <div
                  class="font-heading group-data-[size=sm]/card:text-sm text-lg font-bold text-gray-900 flex items-center"
                  data-slot="card-title"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-file-text mr-2 h-5 w-5 text-emerald-500"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
                    />
                    <path
                      d="M14 2v5a1 1 0 0 0 1 1h5"
                    />
                    <path
                      d="M10 9H8"
                    />
                    <path
                      d="M16 13H8"
                    />
                    <path
                      d="M16 17H8"
                    />
                  </svg>
                   SALES ORDER MONITORING
                </div>
                <div
                  class="text-sm text-zinc-500"
                  data-slot="card-description"
                >
                  Real-time status of commercial contracts and factory locks.
                </div>
              </div>
              <div
                class="inline-flex items-center rounded-lg border px-2.5 py-0.5 font-black uppercase transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-gray-200 text-zinc-500 text-[10px] font-sans"
                role="status"
              >
                0
                 CONTRACTS
              </div>
            </div>
          </div>
          <div
            class="px-[--card-px] group-data-[size=sm]/card:px-3"
            data-slot="card-content"
          >
            <div
              class="rounded-md border border-gray-200 overflow-hidden bg-gray-50"
            >
              <div
                class="relative w-full overflow-x-auto"
                data-slot="table-container"
              >
                <table
                  class="w-full caption-bottom text-sm"
                  data-slot="table"
                >
                  <thead
                    class="[&_tr]:border-b bg-gray-50"
                    data-slot="table-header"
                  >
                    <tr
                      class="border-b transition-colors has-aria-expanded:bg-muted/50 data-[state=selected]:bg-muted border-gray-200 hover:bg-transparent"
                      data-slot="table-row"
                    >
                      <th
                        class="h-10 px-2 text-left align-middle font-medium whitespace-nowrap [&:has([role=checkbox])]:pr-0 text-zinc-500 font-sans text-[10px] uppercase"
                        data-slot="table-head"
                      >
                        SO ID
                      </th>
                      <th
                        class="h-10 px-2 text-left align-middle font-medium whitespace-nowrap [&:has([role=checkbox])]:pr-0 text-zinc-500 font-sans text-[10px] uppercase"
                        data-slot="table-head"
                      >
                        Client Entity
                      </th>
                      <th
                        class="h-10 px-2 text-left align-middle font-medium whitespace-nowrap [&:has([role=checkbox])]:pr-0 text-zinc-500 font-sans text-[10px] uppercase"
                        data-slot="table-head"
                      >
                        Transaction Value
                      </th>
                      <th
                        class="h-10 px-2 text-left align-middle font-medium whitespace-nowrap [&:has([role=checkbox])]:pr-0 text-zinc-500 font-sans text-[10px] uppercase"
                        data-slot="table-head"
                      >
                        Operational Gate
                      </th>
                      <th
                        class="h-10 px-2 align-middle font-medium whitespace-nowrap [&:has([role=checkbox])]:pr-0 text-zinc-500 font-sans text-[10px] uppercase text-center"
                        data-slot="table-head"
                      >
                        Invoice Matrix
                      </th>
                      <th
                        class="h-10 px-2 align-middle font-medium whitespace-nowrap [&:has([role=checkbox])]:pr-0 text-right text-zinc-500 font-sans text-[10px] uppercase"
                        data-slot="table-head"
                      >
                        Command
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="[&_tr:last-child]:border-0"
                    data-slot="table-body"
                  >
                    <tr
                      class="border-b transition-colors hover:bg-muted/50 has-aria-expanded:bg-muted/50 data-[state=selected]:bg-muted"
                      data-slot="table-row"
                    >
                      <td
                        class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 text-center py-20"
                        colspan="6"
                        data-slot="table-cell"
                      >
                        <p
                          class="text-gray-400 text-xs uppercase font-bold tracking-[0.3em]"
                        >
                          No Commercial Contracts in Database
                        </p>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Direksi FinanceDashboard (snapshot) > renders loading state and matches snapshot 1`] = `
<div
  class="w-full h-full animate-[fadeIn_0.3s_ease-out]"
>
  <div
    class="min-h-[calc(100vh-var(--page-py)-var(--page-pb))]"
  >
    <header
      class="flex justify-between items-center border-b border-slate-100 pb-3 mb-[var(--section-gap)]"
      style="margin-bottom: var(--section-gap);"
    >
      <div>
        <h1
          class="text-dashboard-title uppercase"
        >
          Finance
           
          <span
            class="text-status-action"
          >
            Gate v2.0
          </span>
        </h1>
        <p
          class="font-bold text-slate-400 tracking-tight mt-1.5"
          style="font-size: var(--module-subtitle-size);"
        >
          Billing & Payment Verification Command Center
        </p>
      </div>
      <div
        class="hidden md:flex items-center gap-3"
      >
        <button
          class="group/button inline-flex shrink-0 items-center justify-center border bg-clip-padding whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 hover:bg-muted aria-expanded:bg-muted aria-expanded:text-foreground dark:border-input dark:bg-input/30 dark:hover:bg-input/50 h-7 gap-1 rounded-[min(var(--radius-md),12px)] px-2.5 in-data-[slot=button-group]:rounded-lg has-data-[icon=inline-end]:pr-1.5 has-data-[icon=inline-start]:pl-1.5 [&_svg:not([class*='size-'])]:size-3.5 border-gray-200 bg-white text-gray-500 hover:text-gray-900 hover:border-gray-300 font-bold uppercase tracking-tight text-[10px]"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-search mr-2 h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21 21-4.34-4.34"
            />
            <circle
              cx="11"
              cy="11"
              r="8"
            />
          </svg>
           Audit Log
        </button>
      </div>
    </header>
    <div
      class="flex flex-col"
      style="gap: var(--section-gap);"
    >
      <div
        class="grid grid-cols-3 gap-8 mb-6"
      >
        <div
          class="bg-white dark:bg-[#0c1322] border rounded-xl p-5 shadow-2xs transition-all group overflow-hidden relative min-h-[120px] flex items-center justify-between border-rose-300 dark:border-rose-800  "
        >
          <div
            class="flex justify-between items-center relative z-10 w-full"
          >
            <div
              class="space-y-1.5 flex-1 min-w-0 pr-4"
            >
              <p
                class="text-[11px] font-semibold text-slate-500 dark:text-slate-400 uppercase tracking-wider"
              >
                Total SO
              </p>
              <h3
                class="text-2xl font-bold tracking-tight tabular-nums leading-tight text-rose-600 dark:text-rose-400"
              >
                0
              </h3>
              <div
                class="flex items-center gap-2 pt-0.5"
              >
                <div
                  class="flex-1 h-1 bg-slate-100 dark:bg-slate-800 rounded-full overflow-hidden"
                >
                  <div
                    class="h-full bg-rose-400 rounded-full"
                    style="width: 50%;"
                  />
                </div>
                <span
                  class="text-[10px] font-semibold tabular-nums text-rose-600 dark:text-rose-400"
                >
                  50
                  %
                </span>
              </div>
            </div>
            <div
              class="p-3 rounded-xl shrink-0 bg-rose-50 text-rose-500 dark:bg-rose-950/50"
            >
              <span
                class="[&>svg]:w-4 [&>svg]:h-4"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-file-text"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
                  />
                  <path
                    d="M14 2v5a1 1 0 0 0 1 1h5"
                  />
                  <path
                    d="M10 9H8"
                  />
                  <path
                    d="M16 13H8"
                  />
                  <path
                    d="M16 17H8"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <div
          class="bg-white dark:bg-[#0c1322] border rounded-xl p-5 shadow-2xs transition-all group overflow-hidden relative min-h-[120px] flex items-center justify-between border-emerald-300 dark:border-emerald-800  "
        >
          <div
            class="flex justify-between items-center relative z-10 w-full"
          >
            <div
              class="space-y-1.5 flex-1 min-w-0 pr-4"
            >
              <p
                class="text-[11px] font-semibold text-slate-500 dark:text-slate-400 uppercase tracking-wider"
              >
                Pending DP
              </p>
              <h3
                class="text-2xl font-bold tracking-tight tabular-nums leading-tight text-emerald-600 dark:text-emerald-400"
              >
                0
              </h3>
              <div
                class="flex items-center gap-2 pt-0.5"
              >
                <div
                  class="flex-1 h-1 bg-slate-100 dark:bg-slate-800 rounded-full overflow-hidden"
                >
                  <div
                    class="h-full bg-emerald-500 rounded-full"
                    style="width: 100%;"
                  />
                </div>
                <span
                  class="text-[10px] font-semibold tabular-nums text-emerald-600 dark:text-emerald-400"
                >
                  100
                  %
                </span>
              </div>
            </div>
            <div
              class="p-3 rounded-xl shrink-0 bg-emerald-50 text-emerald-500 dark:bg-emerald-950/50"
            >
              <span
                class="[&>svg]:w-4 [&>svg]:h-4"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-dollar-sign"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="12"
                    x2="12"
                    y1="2"
                    y2="22"
                  />
                  <path
                    d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <div
          class="bg-white dark:bg-[#0c1322] border rounded-xl p-5 shadow-2xs transition-all group overflow-hidden relative min-h-[120px] flex items-center justify-between border-rose-300 dark:border-rose-800  "
        >
          <div
            class="flex justify-between items-center relative z-10 w-full"
          >
            <div
              class="space-y-1.5 flex-1 min-w-0 pr-4"
            >
              <p
                class="text-[11px] font-semibold text-slate-500 dark:text-slate-400 uppercase tracking-wider"
              >
                Ready to Produce
              </p>
              <h3
                class="text-2xl font-bold tracking-tight tabular-nums leading-tight text-rose-600 dark:text-rose-400"
              >
                0
              </h3>
              <div
                class="flex items-center gap-2 pt-0.5"
              >
                <div
                  class="flex-1 h-1 bg-slate-100 dark:bg-slate-800 rounded-full overflow-hidden"
                >
                  <div
                    class="h-full bg-rose-400 rounded-full"
                    style="width: 50%;"
                  />
                </div>
                <span
                  class="text-[10px] font-semibold tabular-nums text-rose-600 dark:text-rose-400"
                >
                  50
                  %
                </span>
              </div>
            </div>
            <div
              class="p-3 rounded-xl shrink-0 bg-rose-50 text-rose-500 dark:bg-rose-950/50"
            >
              <span
                class="[&>svg]:w-4 [&>svg]:h-4"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-factory"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 16h.01"
                  />
                  <path
                    d="M16 16h.01"
                  />
                  <path
                    d="M3 19a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V8.5a.5.5 0 0 0-.769-.422l-4.462 2.844A.5.5 0 0 1 15 10.5v-2a.5.5 0 0 0-.769-.422L9.77 10.922A.5.5 0 0 1 9 10.5V5a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2z"
                  />
                  <path
                    d="M8 16h.01"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="grid grid-cols-1 lg:grid-cols-3 gap-6"
      >
        <div
          class="group/card flex flex-col gap-4 overflow-hidden text-sm text-text-main border shadow-[0_4px_6px_-1px_rgba(0,0,0,0.02)] transition-all duration-300 hover:shadow-[0_20px_25px_-5px_rgba(0,0,0,0.05)] hover:border-slate-300 has-data-[slot=card-footer]:pb-0 has-[>img:first-child]:pt-0 data-[size=sm]:gap-3 data-[size=sm]:py-3 data-[size=sm]:has-data-[slot=card-footer]:pb-0 *:[img:first-child]:rounded-t-[--card-radius] *:[img:last-child]:rounded-b-[--card-radius] lg:col-span-3 border-gray-200 bg-white"
          data-size="default"
          data-slot="card"
          style="border-radius: var(--card-radius); padding: var(--card-py) var(--card-px);"
        >
          <div
            class="group/card-header @container/card-header grid auto-rows-min items-start gap-1 rounded-t-[--card-radius] px-[--card-px] group-data-[size=sm]/card:px-3 has-data-[slot=card-action]:grid-cols-[1fr_auto] has-data-[slot=card-description]:grid-rows-[auto_auto] [.border-b]:pb-4 group-data-[size=sm]/card:[.border-b]:pb-3"
            data-slot="card-header"
          >
            <div
              class="flex items-center justify-between"
            >
              <div>
                <div
                  class="font-heading group-data-[size=sm]/card:text-sm text-lg font-bold text-gray-900 flex items-center"
                  data-slot="card-title"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-file-text mr-2 h-5 w-5 text-emerald-500"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
                    />
                    <path
                      d="M14 2v5a1 1 0 0 0 1 1h5"
                    />
                    <path
                      d="M10 9H8"
                    />
                    <path
                      d="M16 13H8"
                    />
                    <path
                      d="M16 17H8"
                    />
                  </svg>
                   SALES ORDER MONITORING
                </div>
                <div
                  class="text-sm text-zinc-500"
                  data-slot="card-description"
                >
                  Real-time status of commercial contracts and factory locks.
                </div>
              </div>
              <div
                class="inline-flex items-center rounded-lg border px-2.5 py-0.5 font-black uppercase transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-gray-200 text-zinc-500 text-[10px] font-sans"
                role="status"
              >
                0
                 CONTRACTS
              </div>
            </div>
          </div>
          <div
            class="px-[--card-px] group-data-[size=sm]/card:px-3"
            data-slot="card-content"
          >
            <div
              class="rounded-md border border-gray-200 overflow-hidden bg-gray-50"
            >
              <div
                class="relative w-full overflow-x-auto"
                data-slot="table-container"
              >
                <table
                  class="w-full caption-bottom text-sm"
                  data-slot="table"
                >
                  <thead
                    class="[&_tr]:border-b bg-gray-50"
                    data-slot="table-header"
                  >
                    <tr
                      class="border-b transition-colors has-aria-expanded:bg-muted/50 data-[state=selected]:bg-muted border-gray-200 hover:bg-transparent"
                      data-slot="table-row"
                    >
                      <th
                        class="h-10 px-2 text-left align-middle font-medium whitespace-nowrap [&:has([role=checkbox])]:pr-0 text-zinc-500 font-sans text-[10px] uppercase"
                        data-slot="table-head"
                      >
                        SO ID
                      </th>
                      <th
                        class="h-10 px-2 text-left align-middle font-medium whitespace-nowrap [&:has([role=checkbox])]:pr-0 text-zinc-500 font-sans text-[10px] uppercase"
                        data-slot="table-head"
                      >
                        Client Entity
                      </th>
                      <th
                        class="h-10 px-2 text-left align-middle font-medium whitespace-nowrap [&:has([role=checkbox])]:pr-0 text-zinc-500 font-sans text-[10px] uppercase"
                        data-slot="table-head"
                      >
                        Transaction Value
                      </th>
                      <th
                        class="h-10 px-2 text-left align-middle font-medium whitespace-nowrap [&:has([role=checkbox])]:pr-0 text-zinc-500 font-sans text-[10px] uppercase"
                        data-slot="table-head"
                      >
                        Operational Gate
                      </th>
                      <th
                        class="h-10 px-2 align-middle font-medium whitespace-nowrap [&:has([role=checkbox])]:pr-0 text-zinc-500 font-sans text-[10px] uppercase text-center"
                        data-slot="table-head"
                      >
                        Invoice Matrix
                      </th>
                      <th
                        class="h-10 px-2 align-middle font-medium whitespace-nowrap [&:has([role=checkbox])]:pr-0 text-right text-zinc-500 font-sans text-[10px] uppercase"
                        data-slot="table-head"
                      >
                        Command
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="[&_tr:last-child]:border-0"
                    data-slot="table-body"
                  >
                    <tr
                      class="border-b transition-colors hover:bg-muted/50 has-aria-expanded:bg-muted/50 data-[state=selected]:bg-muted"
                      data-slot="table-row"
                    >
                      <td
                        class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 text-center py-20 text-gray-400 italic uppercase tracking-tighter text-2xl font-black"
                        colspan="6"
                        data-slot="table-cell"
                      >
                        Decrypting Ledger...
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Direksi FinanceDashboard (snapshot) > renders sales orders + invoices table and matches snapshot 1`] = `
<div
  class="w-full h-full animate-[fadeIn_0.3s_ease-out]"
>
  <div
    class="min-h-[calc(100vh-var(--page-py)-var(--page-pb))]"
  >
    <header
      class="flex justify-between items-center border-b border-slate-100 pb-3 mb-[var(--section-gap)]"
      style="margin-bottom: var(--section-gap);"
    >
      <div>
        <h1
          class="text-dashboard-title uppercase"
        >
          Finance
           
          <span
            class="text-status-action"
          >
            Gate v2.0
          </span>
        </h1>
        <p
          class="font-bold text-slate-400 tracking-tight mt-1.5"
          style="font-size: var(--module-subtitle-size);"
        >
          Billing & Payment Verification Command Center
        </p>
      </div>
      <div
        class="hidden md:flex items-center gap-3"
      >
        <button
          class="group/button inline-flex shrink-0 items-center justify-center border bg-clip-padding whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 hover:bg-muted aria-expanded:bg-muted aria-expanded:text-foreground dark:border-input dark:bg-input/30 dark:hover:bg-input/50 h-7 gap-1 rounded-[min(var(--radius-md),12px)] px-2.5 in-data-[slot=button-group]:rounded-lg has-data-[icon=inline-end]:pr-1.5 has-data-[icon=inline-start]:pl-1.5 [&_svg:not([class*='size-'])]:size-3.5 border-gray-200 bg-white text-gray-500 hover:text-gray-900 hover:border-gray-300 font-bold uppercase tracking-tight text-[10px]"
          data-slot="button"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="lucide lucide-search mr-2 h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m21 21-4.34-4.34"
            />
            <circle
              cx="11"
              cy="11"
              r="8"
            />
          </svg>
           Audit Log
        </button>
      </div>
    </header>
    <div
      class="flex flex-col"
      style="gap: var(--section-gap);"
    >
      <div
        class="grid grid-cols-3 gap-8 mb-6"
      >
        <div
          class="bg-white dark:bg-[#0c1322] border rounded-xl p-5 shadow-2xs transition-all group overflow-hidden relative min-h-[120px] flex items-center justify-between border-rose-300 dark:border-rose-800  "
        >
          <div
            class="flex justify-between items-center relative z-10 w-full"
          >
            <div
              class="space-y-1.5 flex-1 min-w-0 pr-4"
            >
              <p
                class="text-[11px] font-semibold text-slate-500 dark:text-slate-400 uppercase tracking-wider"
              >
                Total SO
              </p>
              <h3
                class="text-2xl font-bold tracking-tight tabular-nums leading-tight text-rose-600 dark:text-rose-400"
              >
                2
              </h3>
              <div
                class="flex items-center gap-2 pt-0.5"
              >
                <div
                  class="flex-1 h-1 bg-slate-100 dark:bg-slate-800 rounded-full overflow-hidden"
                >
                  <div
                    class="h-full bg-rose-400 rounded-full"
                    style="width: 50%;"
                  />
                </div>
                <span
                  class="text-[10px] font-semibold tabular-nums text-rose-600 dark:text-rose-400"
                >
                  50
                  %
                </span>
              </div>
            </div>
            <div
              class="p-3 rounded-xl shrink-0 bg-rose-50 text-rose-500 dark:bg-rose-950/50"
            >
              <span
                class="[&>svg]:w-4 [&>svg]:h-4"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-file-text"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
                  />
                  <path
                    d="M14 2v5a1 1 0 0 0 1 1h5"
                  />
                  <path
                    d="M10 9H8"
                  />
                  <path
                    d="M16 13H8"
                  />
                  <path
                    d="M16 17H8"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <div
          class="bg-white dark:bg-[#0c1322] border rounded-xl p-5 shadow-2xs transition-all group overflow-hidden relative min-h-[120px] flex items-center justify-between border-slate-200/80 dark:border-slate-800  "
        >
          <div
            class="flex justify-between items-center relative z-10 w-full"
          >
            <div
              class="space-y-1.5 flex-1 min-w-0 pr-4"
            >
              <p
                class="text-[11px] font-semibold text-slate-500 dark:text-slate-400 uppercase tracking-wider"
              >
                Pending DP
              </p>
              <h3
                class="text-2xl font-bold tracking-tight tabular-nums leading-tight text-slate-900 dark:text-slate-100"
              >
                1
              </h3>
              <div
                class="flex items-center gap-2 pt-0.5"
              >
                <div
                  class="flex-1 h-1 bg-slate-100 dark:bg-slate-800 rounded-full overflow-hidden"
                >
                  <div
                    class="h-full bg-blue-600 rounded-full"
                    style="width: 90%;"
                  />
                </div>
                <span
                  class="text-[10px] font-semibold tabular-nums text-slate-900 dark:text-slate-100"
                >
                  90
                  %
                </span>
              </div>
            </div>
            <div
              class="p-3 rounded-xl shrink-0 bg-slate-50 text-slate-500 dark:bg-slate-800"
            >
              <span
                class="[&>svg]:w-4 [&>svg]:h-4"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-dollar-sign"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <line
                    x1="12"
                    x2="12"
                    y1="2"
                    y2="22"
                  />
                  <path
                    d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <div
          class="bg-white dark:bg-[#0c1322] border rounded-xl p-5 shadow-2xs transition-all group overflow-hidden relative min-h-[120px] flex items-center justify-between border-rose-300 dark:border-rose-800  "
        >
          <div
            class="flex justify-between items-center relative z-10 w-full"
          >
            <div
              class="space-y-1.5 flex-1 min-w-0 pr-4"
            >
              <p
                class="text-[11px] font-semibold text-slate-500 dark:text-slate-400 uppercase tracking-wider"
              >
                Ready to Produce
              </p>
              <h3
                class="text-2xl font-bold tracking-tight tabular-nums leading-tight text-rose-600 dark:text-rose-400"
              >
                1
              </h3>
              <div
                class="flex items-center gap-2 pt-0.5"
              >
                <div
                  class="flex-1 h-1 bg-slate-100 dark:bg-slate-800 rounded-full overflow-hidden"
                >
                  <div
                    class="h-full bg-rose-400 rounded-full"
                    style="width: 50%;"
                  />
                </div>
                <span
                  class="text-[10px] font-semibold tabular-nums text-rose-600 dark:text-rose-400"
                >
                  50
                  %
                </span>
              </div>
            </div>
            <div
              class="p-3 rounded-xl shrink-0 bg-rose-50 text-rose-500 dark:bg-rose-950/50"
            >
              <span
                class="[&>svg]:w-4 [&>svg]:h-4"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-factory"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 16h.01"
                  />
                  <path
                    d="M16 16h.01"
                  />
                  <path
                    d="M3 19a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V8.5a.5.5 0 0 0-.769-.422l-4.462 2.844A.5.5 0 0 1 15 10.5v-2a.5.5 0 0 0-.769-.422L9.77 10.922A.5.5 0 0 1 9 10.5V5a2 2 0 0 0-2-2H5a2 2 0 0 0-2 2z"
                  />
                  <path
                    d="M8 16h.01"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="grid grid-cols-1 lg:grid-cols-3 gap-6"
      >
        <div
          class="group/card flex flex-col gap-4 overflow-hidden text-sm text-text-main border shadow-[0_4px_6px_-1px_rgba(0,0,0,0.02)] transition-all duration-300 hover:shadow-[0_20px_25px_-5px_rgba(0,0,0,0.05)] hover:border-slate-300 has-data-[slot=card-footer]:pb-0 has-[>img:first-child]:pt-0 data-[size=sm]:gap-3 data-[size=sm]:py-3 data-[size=sm]:has-data-[slot=card-footer]:pb-0 *:[img:first-child]:rounded-t-[--card-radius] *:[img:last-child]:rounded-b-[--card-radius] lg:col-span-3 border-gray-200 bg-white"
          data-size="default"
          data-slot="card"
          style="border-radius: var(--card-radius); padding: var(--card-py) var(--card-px);"
        >
          <div
            class="group/card-header @container/card-header grid auto-rows-min items-start gap-1 rounded-t-[--card-radius] px-[--card-px] group-data-[size=sm]/card:px-3 has-data-[slot=card-action]:grid-cols-[1fr_auto] has-data-[slot=card-description]:grid-rows-[auto_auto] [.border-b]:pb-4 group-data-[size=sm]/card:[.border-b]:pb-3"
            data-slot="card-header"
          >
            <div
              class="flex items-center justify-between"
            >
              <div>
                <div
                  class="font-heading group-data-[size=sm]/card:text-sm text-lg font-bold text-gray-900 flex items-center"
                  data-slot="card-title"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-file-text mr-2 h-5 w-5 text-emerald-500"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M6 22a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h8a2.4 2.4 0 0 1 1.704.706l3.588 3.588A2.4 2.4 0 0 1 20 8v12a2 2 0 0 1-2 2z"
                    />
                    <path
                      d="M14 2v5a1 1 0 0 0 1 1h5"
                    />
                    <path
                      d="M10 9H8"
                    />
                    <path
                      d="M16 13H8"
                    />
                    <path
                      d="M16 17H8"
                    />
                  </svg>
                   SALES ORDER MONITORING
                </div>
                <div
                  class="text-sm text-zinc-500"
                  data-slot="card-description"
                >
                  Real-time status of commercial contracts and factory locks.
                </div>
              </div>
              <div
                class="inline-flex items-center rounded-lg border px-2.5 py-0.5 font-black uppercase transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 border-gray-200 text-zinc-500 text-[10px] font-sans"
                role="status"
              >
                2
                 CONTRACTS
              </div>
            </div>
          </div>
          <div
            class="px-[--card-px] group-data-[size=sm]/card:px-3"
            data-slot="card-content"
          >
            <div
              class="rounded-md border border-gray-200 overflow-hidden bg-gray-50"
            >
              <div
                class="relative w-full overflow-x-auto"
                data-slot="table-container"
              >
                <table
                  class="w-full caption-bottom text-sm"
                  data-slot="table"
                >
                  <thead
                    class="[&_tr]:border-b bg-gray-50"
                    data-slot="table-header"
                  >
                    <tr
                      class="border-b transition-colors has-aria-expanded:bg-muted/50 data-[state=selected]:bg-muted border-gray-200 hover:bg-transparent"
                      data-slot="table-row"
                    >
                      <th
                        class="h-10 px-2 text-left align-middle font-medium whitespace-nowrap [&:has([role=checkbox])]:pr-0 text-zinc-500 font-sans text-[10px] uppercase"
                        data-slot="table-head"
                      >
                        SO ID
                      </th>
                      <th
                        class="h-10 px-2 text-left align-middle font-medium whitespace-nowrap [&:has([role=checkbox])]:pr-0 text-zinc-500 font-sans text-[10px] uppercase"
                        data-slot="table-head"
                      >
                        Client Entity
                      </th>
                      <th
                        class="h-10 px-2 text-left align-middle font-medium whitespace-nowrap [&:has([role=checkbox])]:pr-0 text-zinc-500 font-sans text-[10px] uppercase"
                        data-slot="table-head"
                      >
                        Transaction Value
                      </th>
                      <th
                        class="h-10 px-2 text-left align-middle font-medium whitespace-nowrap [&:has([role=checkbox])]:pr-0 text-zinc-500 font-sans text-[10px] uppercase"
                        data-slot="table-head"
                      >
                        Operational Gate
                      </th>
                      <th
                        class="h-10 px-2 align-middle font-medium whitespace-nowrap [&:has([role=checkbox])]:pr-0 text-zinc-500 font-sans text-[10px] uppercase text-center"
                        data-slot="table-head"
                      >
                        Invoice Matrix
                      </th>
                      <th
                        class="h-10 px-2 align-middle font-medium whitespace-nowrap [&:has([role=checkbox])]:pr-0 text-right text-zinc-500 font-sans text-[10px] uppercase"
                        data-slot="table-head"
                      >
                        Command
                      </th>
                    </tr>
                  </thead>
                  <tbody
                    class="[&_tr:last-child]:border-0"
                    data-slot="table-body"
                  >
                    <tr
                      class="border-b has-aria-expanded:bg-muted/50 data-[state=selected]:bg-muted border-gray-200 hover:bg-gray-50 transition-colors group"
                      data-slot="table-row"
                    >
                      <td
                        class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 font-sans text-xs text-gray-900 group-hover:text-emerald-400"
                        data-slot="table-cell"
                      >
                        SO
                      </td>
                      <td
                        class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0"
                        data-slot="table-cell"
                      >
                        <p
                          class="text-sm font-bold text-gray-900 uppercase tracking-tight"
                        >
                          PT NEX KOSMETIK
                        </p>
                      </td>
                      <td
                        class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 font-sans text-sm text-gray-900"
                        data-slot="table-cell"
                      >
                        IDR 
                        250.000.000
                      </td>
                      <td
                        class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0"
                        data-slot="table-cell"
                      >
                        <div
                          class="inline-flex items-center font-black uppercase transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 font-sans text-[10px] px-2 py-0.5 rounded-none border bg-amber-500/10 text-amber-500 border-amber-500/50"
                          role="status"
                        >
                          PENDING_DP
                        </div>
                      </td>
                      <td
                        class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0"
                        data-slot="table-cell"
                      >
                        <div
                          class="flex gap-2 justify-center flex-wrap"
                        >
                          <button
                            class="text-[9px] px-2 py-1 rounded-sm font-black uppercase transition-all hover:scale-110 flex items-center gap-1 bg-red-500/10 text-red-500 border border-red-500/20"
                          >
                            <svg
                              aria-hidden="true"
                              class="lucide lucide-credit-card h-2 w-2"
                              fill="none"
                              height="24"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                              viewBox="0 0 24 24"
                              width="24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <rect
                                height="14"
                                rx="2"
                                width="20"
                                x="2"
                                y="5"
                              />
                              <line
                                x1="2"
                                x2="22"
                                y1="10"
                                y2="10"
                              />
                            </svg>
                            DP
                             
                          </button>
                        </div>
                      </td>
                      <td
                        class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 text-right"
                        data-slot="table-cell"
                      >
                        <button
                          class="group/button inline-flex shrink-0 items-center justify-center bg-clip-padding font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 hover:text-foreground aria-expanded:bg-muted aria-expanded:text-foreground dark:hover:bg-muted/50 gap-1 rounded-[min(var(--radius-md),12px)] px-2.5 text-[0.8rem] in-data-[slot=button-group]:rounded-lg has-data-[icon=inline-end]:pr-1.5 has-data-[icon=inline-start]:pl-1.5 [&_svg:not([class*='size-'])]:size-3.5 h-8 border border-transparent hover:border-gray-200 hover:bg-gray-50 text-emerald-500"
                          data-slot="button"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="lucide lucide-circle-plus mr-2 h-4 w-4"
                            fill="none"
                            height="24"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <circle
                              cx="12"
                              cy="12"
                              r="10"
                            />
                            <path
                              d="M8 12h8"
                            />
                            <path
                              d="M12 8v8"
                            />
                          </svg>
                          <span
                            class="text-[10px] font-bold uppercase tracking-tight"
                          >
                            Invoice
                          </span>
                        </button>
                      </td>
                    </tr>
                    <tr
                      class="border-b has-aria-expanded:bg-muted/50 data-[state=selected]:bg-muted border-gray-200 hover:bg-gray-50 transition-colors group"
                      data-slot="table-row"
                    >
                      <td
                        class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 font-sans text-xs text-gray-900 group-hover:text-emerald-400"
                        data-slot="table-cell"
                      >
                        SO
                      </td>
                      <td
                        class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0"
                        data-slot="table-cell"
                      >
                        <p
                          class="text-sm font-bold text-gray-900 uppercase tracking-tight"
                        >
                          CV BEAUTY MANDIRI
                        </p>
                      </td>
                      <td
                        class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 font-sans text-sm text-gray-900"
                        data-slot="table-cell"
                      >
                        IDR 
                        480.000.000
                      </td>
                      <td
                        class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0"
                        data-slot="table-cell"
                      >
                        <div
                          class="inline-flex items-center font-black uppercase transition-colors focus:outline-none focus:ring-2 focus:ring-ring focus:ring-offset-2 font-sans text-[10px] px-2 py-0.5 rounded-none border bg-emerald-500/10 text-emerald-500 border-emerald-500/50"
                          role="status"
                        >
                          ACTIVE
                        </div>
                      </td>
                      <td
                        class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0"
                        data-slot="table-cell"
                      >
                        <div
                          class="flex gap-2 justify-center flex-wrap"
                        >
                          <button
                            class="text-[9px] px-2 py-1 rounded-sm font-black uppercase transition-all hover:scale-110 flex items-center gap-1 bg-emerald-500/10 text-emerald-500 border border-emerald-500/20"
                          >
                            <svg
                              aria-hidden="true"
                              class="lucide lucide-credit-card h-2 w-2"
                              fill="none"
                              height="24"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                              viewBox="0 0 24 24"
                              width="24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <rect
                                height="14"
                                rx="2"
                                width="20"
                                x="2"
                                y="5"
                              />
                              <line
                                x1="2"
                                x2="22"
                                y1="10"
                                y2="10"
                              />
                            </svg>
                            FINAL_PAYMENT
                             
                            ✓
                          </button>
                        </div>
                      </td>
                      <td
                        class="p-2 align-middle whitespace-nowrap [&:has([role=checkbox])]:pr-0 text-right"
                        data-slot="table-cell"
                      >
                        <button
                          class="group/button inline-flex shrink-0 items-center justify-center bg-clip-padding font-medium whitespace-nowrap transition-all outline-none select-none focus-visible:border-ring focus-visible:ring-3 focus-visible:ring-ring/50 active:not-aria-[haspopup]:translate-y-px disabled:pointer-events-none disabled:opacity-50 aria-invalid:border-destructive aria-invalid:ring-3 aria-invalid:ring-destructive/20 dark:aria-invalid:border-destructive/50 dark:aria-invalid:ring-destructive/40 [&_svg]:pointer-events-none [&_svg]:shrink-0 hover:text-foreground aria-expanded:bg-muted aria-expanded:text-foreground dark:hover:bg-muted/50 gap-1 rounded-[min(var(--radius-md),12px)] px-2.5 text-[0.8rem] in-data-[slot=button-group]:rounded-lg has-data-[icon=inline-end]:pr-1.5 has-data-[icon=inline-start]:pl-1.5 [&_svg:not([class*='size-'])]:size-3.5 h-8 border border-transparent hover:border-gray-200 hover:bg-gray-50 text-emerald-500"
                          data-slot="button"
                          tabindex="0"
                          type="button"
                        >
                          <svg
                            aria-hidden="true"
                            class="lucide lucide-circle-plus mr-2 h-4 w-4"
                            fill="none"
                            height="24"
                            stroke="currentColor"
                            stroke-linecap="round"
                            stroke-linejoin="round"
                            stroke-width="2"
                            viewBox="0 0 24 24"
                            width="24"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <circle
                              cx="12"
                              cy="12"
                              r="10"
                            />
                            <path
                              d="M8 12h8"
                            />
                            <path
                              d="M12 8v8"
                            />
                          </svg>
                          <span
                            class="text-[10px] font-bold uppercase tracking-tight"
                          >
                            Invoice
                          </span>
                        </button>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
